Fix final labels overlap

--- a/web/style.css
+++ b/web/style.css
@@ -96,6 +96,7 @@ form {
     padding: 1px 4px;
     color: white;
     font-weight: bold;
+    margin-left: 10px;
 }
 
 #percentile {
